--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   text-align: center;
   display: flex;
+  padding: 30px 0;
 }
 .icon-block div {
   font-size: 48px;
@@ -31,6 +32,11 @@
 }
 @media (min-width: 993px) {
   .row-flex-on-large .row {
+    display: flex;
+  }
+}
+@media (min-width: 601px) {
+  .flex-medium {
     display: flex;
   }
 }
