--- a/src/app/entre-em-contato/entre-em-contato.component.html
+++ b/src/app/entre-em-contato/entre-em-contato.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="contact-u">
-		<h4>Entre em contato</h4>
+		<h4 class="contact-title">Entre em contato</h4>
 	</div>
 	<div class="row">
 		<form class="col s12" [formGroup]="myForm" (ngSubmit)="onSubmit()">
@@ -61,7 +61,7 @@
 		</form>
 	</div>
 
-	<div class="card">
+	<div class="card grey darken-3 white-text">
 		<div class="card-content">
 			<span class="card-title">
 				<i class="material-icons amber-text">access_time</i> Horário de funcionamento
