--- a/src/app/sobre-nos/sobre-nos.component.css
+++ b/src/app/sobre-nos/sobre-nos.component.css
@@ -4,10 +4,47 @@
 .fs-16 {
   font-size: 16px;
 }
+.icon-block {
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  display: flex;
+}
+.icon-block div {
+  font-size: 48px;
+  line-height: 1em;
+  font-family: "Poppins";
+  font-weight: 700;
+  text-transform: uppercase;
+}
 .icon-block h3 {
     font-size: 48px;
     line-height: 1em;
     font-family: "Poppins";
     font-weight: 700;
     text-transform: uppercase;
+}
+.carousel .carousel-item, .carousel .carousel-item > img {
+  height: 100%;
+}
+.vertical-middle {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  height: 100%;
+}
+.fs28 {
+  font-size: 28px !important;
+}
+.about-us-title {
+  text-transform: uppercase; 
+  font-family: 'Eras ITC', 'Eras Light ITC', sans-serif ; 
+  font-weight: bold;
+  color: gray;
+}
+@media (min-width: 601px) {
+  .flex-medium {
+    display: flex;
+  }
 }
