--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row grey darken-3 no-margin">
     <div class="col s12 m6 push-m3 l4 push-l4">
         <div style="padding: 30px 0; text-align: center;">
             <img src="/assets/img/logo-fitness-o2.png" class="responsive-img">
@@ -6,51 +6,7 @@
     </div>
 </div>
 
-<div class="container">
-    <h3 class="center">Sobre nós</h3>
-</div>
-
-<div class="row no-margin fs-16">
-    <div class="col s12" style="padding: 20px;">
-        <p class="center">Fundado em 2014, em São José dos Campos/SP, o Studio O2 Fitness apresenta um novo modelo de negócio e de conceito de treinamento.
-        Um ambiente moderno, completo, que visa a promoção da qualidade de vida a partir de treinos que aliam eficiência e segurança,
-        sem perder o foco em resultados.</p>
-        <p class="center">Nossos alunos são homens e mulheres que, independentemente da idade, buscam um estilo de vida mais saudável; querem o bem-estar,
-        viver sem dores, com disposição para aproveitar a vida na companhia da família e entes queridos.</p>
-        <p class="center">Oferecemos treinos personalizados, respeitando a individualidade, o que garante resultados mais eficazes em menos tempo,
-        sempre indo além do objetivo do aluno, que normalmente envolve apenas a diminuição do peso e a definição muscular. Nossa
-        meta é torná-lo apto para todas as atividades do dia a dia.</p>
-        <p class="center">O plano de trabalho acontece em uma relação de parceria onde a busca de resultados passa a ser uma tarefa conjunta. Comemora-se
-        cada pequena vitória da mesma forma que há o apoio e a motivação para superar as dificuldades.</p>
-        <p class="center">Trabalhamos para ajudar o aluno a apaixonar-se por si mesmo, oferecendo além da atividade física, orientação sobre hábitos
-        alimentares e estilo de vida, para que o treino seja um aliado em uma trajetória de mudança de comportamento em prol de uma
-        vida mais saudável.</p>
-
-        <h3 class="center">MISSÃO</h3>
-        <p class="center">Oferecer um novo conceito de treinamento físico, onde o atendimento personalizado possibilita o conhecimento do indivíduo
-        e de suas necessidades, possibilitando a criação de planos de trabalho onde os objetivos sejam atingidos de forma mais assertiva
-        e em menos tempo.</p>
-
-        <h3 class="center">VISÃO</h3>
-        <p class="center">Ser reconhecido como um dos melhores centros de treinamento personalizado do Vale do Paraíba, sendo referência para quem
-        busca a melhora na qualidade de vida e o ganho de condicionamento físico, através do atendimento de qualidade, oferecido
-        por bons profissionais, com segurança e respeitando os limites de cada um.</p>
-
-        <h3 class="center">VALORES</h3>
-        <p class="center">RESPEITO ao indivíduo e às suas limitações;</p>
-        <p class="center">ÉTICA ao orientar e oferecer o melhor treinamento personalizado possível;</p>
-        <p class="center">SOLIDEZ nas ações e tratativas para construir uma história de sucesso e ser referência na área de treinamento físico;</p>
-        <p class="center">EMPREENDEDORISMO na busca de novas ideias e objetivos para manter a empresa em constante evolução.</p>
-        <p class="center">UNIÃO como objetivo maior, fazendo com que a busca de todos os alunos tenha o único objetivo: mais saúde e qualidade de vida.</p>
-    </div>
-</div>
-
-<div 
-    #carousel
-    class="carousel carousel-slider" 
-    [ngClass]="{ 'initialized': showInitialized }" 
-    materialize="carousel" 
-    [materializeParams]="[{fullWidth: true, indicators: true}]" 
+<div #carousel class="carousel carousel-slider" [ngClass]="{ 'initialized': showInitialized }" materialize="carousel" [materializeParams]="[{fullWidth: true, indicators: true}]"
     [materializeActions]="actions">
 
     <div class="carousel-item white-text" href="#one!">
@@ -85,12 +41,96 @@
     </div>
 </div>
 
+<div class="container">
+    <h3 class="center about-us-title">Quem somos</h3>
+</div>
+
+<div class="row no-margin fs-16">
+    <div class="col s12" style="padding: 20px;">
+        <p>Fundado em 2014, em São José dos Campos/SP, o Studio Fitness o2 apresenta um novo modelo de negócio e de conceito de treinamento.
+        Um ambiente moderno, completo, que visa a promoção da qualidade de vida a partir de treinos que aliam eficiência e segurança,
+        sem perder o foco em resultados.</p>
+        <p>Nossos alunos são homens e mulheres que, independentemente da idade, buscam um estilo de vida mais saudável; querem o bem-estar,
+        viver sem dores, com disposição para aproveitar a vida na companhia da família e entes queridos.</p>
+        <p>Oferecemos treinos personalizados, respeitando a individualidade, o que garante resultados mais eficazes em menos tempo,
+        sempre indo além do objetivo do aluno, que normalmente envolve apenas a diminuição do peso e a definição muscular. Nossa
+        meta é torná-lo apto para todas as atividades do dia a dia.</p>
+        <p>O plano de trabalho acontece em uma relação de parceria onde a busca de resultados passa a ser uma tarefa conjunta. Comemora-se
+        cada pequena vitória da mesma forma que há o apoio e a motivação para superar as dificuldades.</p>
+        <p>Trabalhamos para ajudar o aluno a apaixonar-se por si mesmo, oferecendo além da atividade física, orientação sobre hábitos
+        alimentares e estilo de vida, para que o treino seja um aliado em uma trajetória de mudança de comportamento em prol de uma
+        vida mais saudável.</p>
+    </div>
+</div>
+
+
 <!--   Icon Section   -->
-<div class="row block-1 no-margin">
-	<div class="col s12 amber center-align">
-		<div class="icon-block" style="padding-bottom: 30px;">
-			<h3 class="white-text center-align" style="margin-bottom: 20px">Enjoy <br>a free trial</h3>
-			<a class="btn white amber-text" href="#">FREE 7 DAYS TRIAL</a>
+<div class="row block-1 flex-medium">
+	<!-- CAROUSEL -->
+	<div #carouselSmall1 class="carousel carousel-slider" [ngClass]="{ 'initialized': showInitialized }" materialize="carousel"
+		[materializeParams]="[{fullWidth: true, indicators: true}]" [materializeActions]="actions" style="flex: 1;">
+
+		<div class="carousel-item white-text" href="#one!">
+			<img src="assets/img/sobre-nos-12.jpg" class="responsive-img">
+		</div>
+		<div class="carousel-item white-text" href="#two!">
+			<img src="assets/img/sobre-nos-14.jpg" class="responsive-img">
+		</div>
+		<div class="carousel-item white-text" href="#three!">
+			<img src="assets/img/sobre-nos-2.jpg" class="responsive-img">
+		</div>
+		<div class="carousel-item white-text" href="#four!">
+			<img src="assets/img/sobre-nos-10.jpg" class="responsive-img">
 		</div>
 	</div>
+
+	<div class="icon-block grey darken-3" style="flex: 1;">
+		<div #carouselWords1 class="carousel carousel-slider" [ngClass]="{ 'initialized': showInitialized }" materialize="carousel"
+		[materializeParams]="[{fullWidth: true, indicators: false}]" [materializeActions]="actions">
+		
+			<div class="carousel-item center-align">
+				<div class="vertical-middle fs28">
+					<span class="amber-text">Reabilitação</span> <span class="grey-text text-lighten-2">funcional e esportiva</span>
+				</div>
+			</div>
+			<div class="carousel-item amber-text" style="margin: 1rem 0;">
+				<div class="vertical-middle fs28">
+					<span class="grey-text text-lighten-2">Preparação</span> <span class="amber-text">Esportiva</span>
+				</div>
+			</div>
+			<div class="carousel-item grey-text text-lighten-2 center-align">
+				<div class="vertical-middle fs28">
+					<span class="amber-text">Prevenção</span> <span class="grey-text text-lighten-2">de Lesão</span>
+				</div>
+			</div>
+			<div class="carousel-item amber-text" style="margin: 1rem 0;">
+				<div class="vertical-middle fs28">
+					<span class="grey-text text-lighten-2">Ganho de</span> <span class="amber-text">Massa Muscular</span>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+</div>
+
+<div class="row no-margin fs-16">
+    <div class="col s12" style="padding: 20px;">
+        <h3 class="center about-us-title">MISSÃO</h3>
+        <p>Oferecer um novo conceito de treinamento físico, onde o atendimento personalizado possibilita o conhecimento do indivíduo
+        e de suas necessidades, possibilitando a criação de planos de trabalho onde os objetivos sejam atingidos de forma mais assertiva
+        e em menos tempo.</p>
+
+        <h3 class="center about-us-title">VISÃO</h3>
+        <p>Ser reconhecido como um dos melhores centros de treinamento personalizado do Vale do Paraíba, sendo referência para quem
+        busca a melhora na qualidade de vida e o ganho de condicionamento físico, através do atendimento de qualidade, oferecido
+        por bons profissionais, com segurança e respeitando os limites de cada um.</p>
+
+        <h3 class="center about-us-title">VALORES</h3>
+        <p><strong>RESPEITO</strong> ao indivíduo e às suas limitações;</p>
+        <p><strong>ÉTICA</strong> ao orientar e oferecer o melhor treinamento personalizado possível;</p>
+        <p><strong>SOLIDEZ</strong> nas ações e tratativas para construir uma história de sucesso e ser referência na área de treinamento físico;</p>
+        <p><strong>EMPREENDEDORISMO</strong> na busca de novas ideias e objetivos para manter a empresa em constante evolução.</p>
+        <p><strong>UNIÃO</strong> como objetivo maior, fazendo com que a busca de todos os alunos tenha o único objetivo: mais saúde e qualidade de vida.</p>
+    </div>
 </div>
