--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -189,8 +189,8 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="/">Home</a></li>
 							<li><a href="/sobre-nos">Sobre nós</a></li>
-							<li><a href="/localizacao">Localização</a></li>
-							<li><a href="/blog">Blog</a></li>
+							<li><a href="/entre-em-contato">Entre em contato</a></li>
+							<!--<li><a href="/blog">Blog</a></li>-->
 							<li><a href="/gallery">Galeria</a></li>
 							{{#if user}}
 							<li><a href="/keystone/signout">Sign Out</a></li>
@@ -293,22 +293,10 @@
 					</div>
 					<div class="row">
 						<div class="col-sm-12 col-md-4 col-lg-4">
-							<h5>Services</h5>
-							<p><a href="#" class="grey-text text-darken-4">Link 1</a></p>
-							<p><a href="#" class="grey-text text-darken-4">Link 2</a></p>
-							<p><a href="#" class="grey-text text-darken-4">Link 3</a></p>
-						</div>
-						<div class="col-sm-12 col-md-4 col-lg-4">
-							<h5>Info</h5>
-							<p><a href="#" class="grey-text text-darken-4">Link 1</a></p>
-							<p><a href="#" class="grey-text text-darken-4">Link 2</a></p>
-							<p><a href="#" class="grey-text text-darken-4">Link 3</a></p>
-						</div>
-						<div class="col-sm-12 col-md-4 col-lg-4">
-							<h5>Studio Fitness</h5>
-							<p><a href="#" class="grey-text text-darken-4">Link 1</a></p>
-							<p><a href="#" class="grey-text text-darken-4">Link 2</a></p>
-							<p><a href="#" class="grey-text text-darken-4">Link 3</a></p>
+							<h5>Links Úteis</h5>
+							<p><a href="https://www.portalenaf.com.br" target="_blank" class="grey-text text-darken-4">PortalEnaf</a></p>
+							<p><a href="http://www.educacaofisica.com.br" target="_blank" class="grey-text text-darken-4">EducacaoFisica</a></p>
+							<p><a href="https://www.crefsp.gov.br" target="_blank" class="grey-text text-darken-4">CREFSP</a></p>
 						</div>
 					</div>
 				</div>
