--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <li><a routerLink="" class="black-text">Home</a></li>
       <li><a routerLink="sobre-nos" class="black-text">Sobre nós</a></li>
 			<li><a routerLink="entre-em-contato" class="black-text">Entre em contato</a></li>
-			<li><a href="/blog" class="black-text">Blog</a></li>
+			<!--<li><a href="/blog" class="black-text">Blog</a></li>-->
 			<li><a href="/gallery" class="black-text">Galeria</a></li>
     </ul>
 		
@@ -24,7 +24,7 @@
 			<p><a (click)="onClickSideNav()" routerLink="">Home</a></p>
 			<p><a (click)="onClickSideNav()" routerLink="sobre-nos">Sobre nós</a></p>
 			<p><a (click)="onClickSideNav()" routerLink="entre-em-contato">Entre em contato</a></p>
-			<p><a (click)="onClickSideNav()" href="/blog">Blog</a></p>
+			<!--<p><a (click)="onClickSideNav()" href="/blog">Blog</a></p>-->
 			<p><a (click)="onClickSideNav()" href="/gallery">Galeria</a></p>
 		</collapsible-body>
 	</collapsible-list-item>
@@ -32,44 +32,3 @@
 </collapsible-list>
 
 <router-outlet></router-outlet>
-
-<footer class="page-footer grey darken-3">
-	
-	<app-contato></app-contato>
-
-  <div class="amber footer-links">
-    <div class="container grey-text text-darken-3" style="padding: 0 15px;">
-      <div class="row">
-        <div class="col s3 push-s1 m2 push-m3 l1 push-l5">
-          <a href="https://api.whatsapp.com/send?l=pt&phone=5512988001234" target="_blank"><img src="assets/img/whatsapp.png" style="width: 100%"></a>
-        </div>
-        <div class="col s3 push-s1 m2 push-m3 l1 push-l5">
-          <a href="https://www.facebook.com/studiofitnesso2/" target="_blank"><img src="assets/img/facebook.png" style="width: 100%"></a>
-        </div>
-        <div class="col s3 push-s1 m2 push-m3 l1 push-l5">
-          <a href="https://www.instagram.com/studiofitnesso2/" target="_blank"><img src="assets/img/instagram.png" style="width: 100%"></a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s12 m6 l4">
-          <h5>Services</h5>
-          <p><a href="#" class="grey-text text-darken-4">Link 1</a></p>
-          <p><a href="#" class="grey-text text-darken-4">Link 2</a></p>
-          <p><a href="#" class="grey-text text-darken-4">Link 3</a></p>
-        </div>
-        <div class="col s12 m6 l4">
-          <h5>Info</h5>
-          <p><a href="https://www.portalenaf.com.br" target="_blank" class="grey-text text-darken-4">PortalEnaf</a></p>
-          <p><a href="http://www.educacaofisica.com.br" target="_blank" class="grey-text text-darken-4">EducacaoFisica</a></p>
-          <p><a href="https://www.crefsp.gov.br" target="_blank" class="grey-text text-darken-4">CREFSP</a></p>
-        </div>
-        <div class="col s12 m6 l4">
-          <h5>Studio Fitness</h5>
-          <p><a href="#" class="grey-text text-darken-4">Link 1</a></p>
-          <p><a href="#" class="grey-text text-darken-4">Link 2</a></p>
-          <p><a href="#" class="grey-text text-darken-4">Link 3</a></p>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
