--- a/src/app/entre-em-contato/entre-em-contato.component.html
+++ b/src/app/entre-em-contato/entre-em-contato.component.html
@@ -1,6 +1,15 @@
+<div class="row grey darken-3 no-margin">
+	<div class="col s12 m6 push-m3 l4 push-l4">
+			<div style="padding: 30px 0; text-align: center;">
+					<img src="/assets/img/logo-fitness-o2.png" class="responsive-img">
+			</div>
+	</div>
+</div>
+
 <div class="container">
 	<div class="contact-u">
 		<h4 class="contact-title">Entre em contato</h4>
+		<p>Nos mande uma mensagem que o quanto antes iremos responder.</p>
 	</div>
 	<div class="row">
 		<form class="col s12" [formGroup]="myForm" (ngSubmit)="onSubmit()">
@@ -95,3 +104,5 @@
 	</div>
 
 </div>
+
+<app-footer showContact=false></app-footer>
