--- a/templates/views/blog.hbs
+++ b/templates/views/blog.hbs
@@ -13,6 +13,13 @@
 	}
 </style>
 
+<div class="row grey darken-3 no-margin">
+	<div class="col s12 m6 push-m3 l4 push-l4">
+		<div style="padding: 30px 0; text-align: center;">
+			<img src="/assets/img/logo-fitness-o2.png" class="responsive-img">
+		</div>
+	</div>
+</div>
 <div class="container">
 	<div class="row">
 		<div class="col-sm-8 col-md-9">
