--- a/templates/views/gallery.hbs
+++ b/templates/views/gallery.hbs
@@ -1,3 +1,10 @@
+<div class="row grey darken-3 no-margin">
+	<div class="col s12 m6 push-m3 l4 push-l4">
+		<div style="padding: 30px 0; text-align: center;">
+			<img src="/assets/img/logo-fitness-o2.png" class="responsive-img">
+		</div>
+	</div>
+</div>
 <div class="container">
 	<h1>Galeria</h1>
 </div>
@@ -28,3 +35,4 @@
 	<h3 class="text-muted">There are no image galleries yet.</h3>
 	{{/if}}
 </div>
+<div style="height: 20px;"></div>
